# esp32-air-quality

./: .gitmodules  CMakeLists.txt  README.md  partitions.csv  platformio.ini
components/aws-iot/: CMakeLists.txt
components/aws-iot/include/: aws_mqtt.h  core_mqtt_config.h  logging_stack.h  tls_freertos.h
components/aws-iot/source/: aws_mqtt.c  tls_freertos.c
include/: tasks.h
src/: main.c  task_co2.c  task_dht.c  task_gas.c  task_ldr.c  task_logging.c  task_mqtt.c  task_power.c
